app/layout.module.scss
.page {
  display: grid;
  height: 100vh;
  height: 100svh;
}
.main {
  grid-area: main;
  display: grid;
  z-index: 0;
}
.sidebar {
  transition:
    opacity 0.2s,
    visibility 0.2s,
    transform 0.2s;
  z-index: 1;
}
.openSidebarButton {
  position: fixed;
  top: 1rem;
  left: 1rem;
  z-index: 2;
}

@media (min-width: 60rem) {
  // Desktop-only styles.

  .page {
    grid-template-columns: auto 1fr;
    grid-template-areas: "sidebar main";
  }
  .sidebar {
    grid-area: sidebar;
    width: min(25rem, 30vw);
  }
  .openSidebarButton {
    display: none;
  }
}
@media (max-width: 59.999rem) {
  // Mobile-only styles.

  .page {
    grid-template-columns: 1fr;
    grid-template-areas: "main";
  }
  .sidebar {
    position: fixed;
    width: min(calc(100vw - 2rem), 25rem);
    height: 100%;
    visibility: hidden;
    opacity: 0;
    transform: translate(-1rem, 0);
    --extra-margin: 3rem;
  }
  .main {
    margin-top: 3rem;
  }

  :global(.sidebarOpen) {
    .sidebar {
      visibility: visible;
      opacity: 1;
      transform: translate(0, 0);
    }
  }
}

